# nflprojections

./: FUNCTIONAL_ARCHITECTURE.md  LICENSE  README.md  demo_composed_projection_source.py  demo_functional_architecture.py  demo_package_organization.py  mkdocs.yml  nfproj.csv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  testnfl.py  validate_requirements.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml
docs/: ETR_INTEGRATION.md  index.md  installation.md  quickstart.md
docs/api/: combine.md  fetch.md  matching.md  parse.md  scoring.md  sources.md  standardize.md
docs/architecture/: functional.md  overview.md
docs/development/: contributing.md
docs/examples/: advanced.md  basic.md
examples/: complete_matching_workflow.py  etr_usage.py  fantasypros_usage.py  player_matching_example.py
nflprojections/: __init__.py  base_fetcher.py  base_parser.py  base_standardizer.py  dk.py  espnapi.py  etr.py  nf.py  nflcom.py  nflcom_parser.py  nflcom_refactored.py  nflprojections.py  projectioncombiner.py  projectionsource.py  rg.py  scoring.py  watson.py
nflprojections/combine/: __init__.py  projectioncombiner.py
nflprojections/fetch/: __init__.py  espn_fetcher.py  etr_fetcher.py  fantasylife_fetcher.py  fantasypros_fetcher.py  nflcom_fetcher.py  rotogrinders_fetcher.py
nflprojections/matching/: __init__.py  player_matcher.py
nflprojections/parse/: __init__.py  base_parser.py  espn_parser.py  etr_parser.py  fantasylife_parser.py  fantasypros_parser.py  nflcom_parser.py  rotogrinders_parser.py
nflprojections/scoring/: __init__.py  scoring.py  scoring_formats.py
nflprojections/sources/: __init__.py  espn.py  etr.py  etr_refactored.py  fantasylife.py  fantasypros.py  nflcom.py  nflcom_refactored.py  projectionsource.py  rotogrinders.py  rotogrinders_refactored.py
nflprojections/standardize/: __init__.py  base_standardizer.py
scripts/: process_raw.py
tests/: conftest.py  test_dk.py  test_espn_components.py  test_espnapi.py  test_etr.py  test_fantasylife.py  test_fantasypros_components.py  test_ffa.py  test_functional_components.py  test_fuzzy_projection_combiner.py  test_nf.py  test_nflcom.py  test_nflcom_decoupled.py  test_nflcom_issue_62.py  test_nflcom_refactored_decoupled.py  test_nflprojections.py  test_player_matcher.py  test_projection_source_composed.py  test_projection_source_decoupled.py  test_rotogrinders.py  test_scoring.py  test_scoring_formats.py
tests/testdata/: blitz.html
tests/testdata/2020/6/raw/: 2020_w6_DKSalaries_dk_main.csv  2020_w6_ETR_dk_main.csv  2020_w6_espn_all_all.csv  2020_w6_ffa_dk_all.csv  (+3 more)
