[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nflprojections"
version = "0.2"
description = "python library for collecting and combining NFL projections"
authors = [
    {name = "Eric Truett", email = "sansbacon@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/sansbacon/nflprojections"
Repository = "https://github.com/sansbacon/nflprojections"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["nflprojections*"]

[tool.setuptools.package-data]
nflprojections = ["data/*.*"]