[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nflprojections"
version = "0.2"
description = "python library for collecting and combining NFL projections"
authors = [
    {name = "Eric Truett", email = "sansbacon@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.0.0",
]
optional = [
    "nflschedule>=0.2.0",
    "nflnames>=0.1.0",
    "browser_cookie3>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/sansbacon/nflprojections"
Repository = "https://github.com/sansbacon/nflprojections"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["nflprojections*"]

[tool.setuptools.package-data]
nflprojections = ["data/*.*"]